fix dark mode menu colors

--- a/src/scss/root.scss
+++ b/src/scss/root.scss
@@ -485,7 +485,7 @@
       }
     }
 
-    .scroll {
+    &.scroll {
       #navbar-menu {
         ul {
           li {
@@ -713,6 +713,17 @@
 
               &.active {
                 color: var(--primary);
+              }
+            }
+          }
+        }
+      }
+      &.scroll {
+        #navbar-menu {
+          ul {
+            li {
+              a {
+                color: #fff;
               }
             }
           }
